@@ -67,3 +67,4 @@ Li Xiaonong-CXL004 <Xiaonong.Li@motorola.com>
 Jose Pedro Oliveira <jpo@lsd.di.uminho.pt>
 Randy Couey <coueyr@spawar.navy.mil>
 Arndt Jonasson <arndt@tail-f.com>
+Sebastian Strollo <seb@tail-f.com>
